AD-382 mobile styles, fixing media queries, widths, tablet/phone styles, ul spacing, container/wrapper padding, push to branch

--- a/wp-content/themes/Divi-child/sass/modules/_card.scss
+++ b/wp-content/themes/Divi-child/sass/modules/_card.scss
@@ -1,6 +1,10 @@
 .home-card-wrapper {
 	margin: 0 auto;
 	padding: 80px 0px !important;
+
+	@media (max-width: 1000px) {
+		padding: 0px !important;
+	}
 }
 
 .home-card {
@@ -38,11 +42,23 @@
     		color: $red;
     	}
     }
+
+    @media only screen and (max-width: 1300px) {
+	    width: 30% !important;
+	}
+	@media (max-width: 1000px) {
+		width: 100% !important;
+	    margin: 10px auto !important;
+	}
 }
 
 .home-card h2 {
     text-transform: none !important;
     font-weight: 700 !important;
+
+    @media (max-width: 1000px) {
+    	margin-top: 0px;
+    }
 }
 
 .home-card h6 {
@@ -65,6 +81,13 @@
     list-style-type: none;
     padding: 0;
     margin: 20px 20px 0 0;
+
+    @media (max-width: 1000px) {
+    	width: 45%;
+    }
+    @media (max-width: 480px) {
+    	width: 100%;
+    }
 }
 
 .home-card li:after {
